# https://pypi.org/project/setupcfg-generator/
[metadata]
name = pid-trap
version = 2019.5.15
url = https://github.com/looking-for-a-job/pid-trap
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = child pid

[options]
install_requires = 
	setuptools
scripts = 
	scripts/pid-trap
